# stoys-api

./: .gitignore  Makefile  README.md  pyproject.toml  test.py
src/stoys/: __init__.py
src/stoys_api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
