[project]
name = "stoys-api"
version = "0.0.0"
description = "Reverse engineered API for Ubit STOYS"
readme = "README.md"
license = {text = "GPL-3.0"}
maintainers = [{name = "Çağan Mert İŞLEK", email = "islekcaganmert@hereus.net"}]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GPL-3.0 License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
requires-python = ">=3.9"
dependencies = ["requests", "bs4"]

[project.urls]
Donate = "https://www.buymeacoffee.com/islekcaganmert"
Changes = "https://github.com/islekcaganmert/stoys-api/commits/main"
"Source Code" = "https://github.com/islekcaganmert/stoys-api"
"Issue Tracker" = "https://github.com/islekcaganmert/stoys-api/issues"

[build-system]
requires = ["setuptools","wheel"]
build-backend = "setuptools.build_meta"